test: added tests for JwtTokenUtil

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -14,6 +14,8 @@ spring.datasource.hikari.minimum-idle=5
 spring.main.allow-bean-definition-overriding=true
 
 # jwt config
+jwt.secret=tennis-secret
+jwt.issuer=inqool.cz
 jwt.accessToken.expiration=60000
 jwt.refreshToken.expiration=120000
 
