--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.test.database.replace=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.minimum-idle=5
 
